fix typos made in the language

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <li>
             <a href="#team"><button id="contact-btn">Team</button></a>
           </li>
-          <li class="active">
+          <!-- <li class="active">
             <a href="./index.html"><button id="link-btn">Home</button></a>
-          </li>
+          </li> -->
           <li>
             <a href="./contact.html"><button id="link-btn">Contact</button></a>
           </li>
@@ -78,6 +78,7 @@
           <input type="checkbox" />
           <div class="toggle-container" id="toggle-container"></div>
         </label>
+
       </nav>
     </div>
   </header>
@@ -165,8 +166,6 @@
   <div class="neverMissUpdate">
     <div class="neverMissUpdateContainer">
       <i class="fas fa-layer-group"></i>
-
-      <h1>Never miss an update</h1>
 
       <h1 class="update-heading">Never miss an update</h1>
 
